WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305929
[GLib] Fix UsesSingleWebProcess propagation to the NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=305929
Summary
[GLib] Fix UsesSingleWebProcess propagation to the NetworkProcess
Olivier Blin
Reported
2026-01-21 09:05:09 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2026-01-21 09:06:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56966
EWS
Comment 2
2026-01-22 08:09:34 PST
Committed
306013@main
(0ce9e754b015): <
https://commits.webkit.org/306013@main
> Reviewed commits have been landed. Closing PR #56966 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-22 08:10:17 PST
<
rdar://problem/168676953
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug