[GLib] Fix UsesSingleWebProcess propagation to the NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=305929

Reviewed by Adrian Perez de Castro.

The Network process has been migrated to use SharedPreferencesForWebProcess
in commit e0533e5d92ac (281415@main), but only the Cocoa port has been updated
to propagate the WebProcessPool configuration to the PageConfiguration.
Page preferences are used to initialize the NetworkProcess preferences.

Update the glib port to apply the setting when creating the PageConfiguration.

* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewCreatePageConfiguration):

Canonical link: https://commits.webkit.org/306013@main